Claim feedbacks are covered

--- a/src/client-profile/claim-12.html
+++ b/src/client-profile/claim-12.html
@@ -147,8 +147,13 @@
                         <h3 class="title  text-center">How many vehicles were involved in this accident</h3>
 
                         <form class="mt-4">
-                            <div class="contain-wrapper-sm">
-                               <input class="form-control w-50 mx-auto" placeholder="Enter the no. of vehicles" />
+                            <div class="contain-wrapper-sm text-center">
+                                <div class="numeric-card">
+                                    <button class="btn btn-numeric">-</button>
+                                    <input class="form-control numeric-input" placeholder="no" />
+                                    <button class="btn btn-numeric">+</button>
+                                </div>
+                                <small class="text-light-gray fs-14 mt-1">This includes your vehicle</small>
                             </div>
 
                             <div class="contain-wrapper-sm">
