--- a/src/client-profile/claim-17.html
+++ b/src/client-profile/claim-17.html
@@ -146,32 +146,43 @@
                         </div>
                         <h3 class="title  text-center">Do you want to go through their Insurance or Yours?</h3>
                         <label class="text-center title fw-normal mt-3">
-                            You don't have rental car coverage for this vehicle, We can go through your insurance but you will not get a rental car.<br>
-We can go through the other person’s insurance , but the other company has to accept fault, then they will pay for your rental car  
+                            You don't have rental car coverage for this vehicle, We can go through your insurance but
+                            you will not get a rental car.<br>
+                            We can go through the other person’s insurance , but the other company has to accept fault,
+                            then they will pay for your rental car
                         </label>
 
                         <form class="mt-4">
-                            <div class="container-wrapper-md">
-                                <div class="d-flex flex-wrap justify-content-center claim-section ">
-                                    <label class="checkbox-inline squar-boxes mb-0" for="Yes">
-                                        <input class="checkbox-control" type="radio" name="glass-damage" value="" id="Yes" checked>
-                                        <span class="checkbox-custom"></span>
-                                        <span class="checkbox-label fs-14">
-                                            <img src="../images/claim-icons/My_Active.svg" alt="" class="active" />
-                                            <img src="../images/claim-icons/My_Inactive.svg" alt="" class="offline" />
-                                            Use My Insurance
-                                        </span>
-                                    </label>
-                                    <label class="checkbox-inline squar-boxes mb-0" for="No">
-                                        <input class="checkbox-control" type="radio" name="glass-damage" value="" id="No">
-                                        <span class="checkbox-custom"></span>
-                                        <span class="checkbox-label fs-14">
-                                            <img src="../images/claim-icons/Their_Active.svg" alt=""
-                                                class="active" />
-                                            <img src="../images/claim-icons/Their_Inactive.svg" alt="" class="offline" />
-                                            Use Their Insurance
-                                        </span>
-                                    </label>
+                            <div class="container-wrapper-md container-claim">
+
+                                <div class="row g-3 justify-content-center claim-section">
+                                    <div class="col-md-4 col-xl-4 col-6 z-index-2">
+                                        <label class="checkbox-inline squar-boxes mb-0" for="Yes">
+                                            <input class="checkbox-control" type="radio" name="glass-damage" value=""
+                                                id="Yes" checked>
+                                            <span class="checkbox-custom"></span>
+                                            <span class="checkbox-label fs-14">
+                                                <img src="../images/claim-icons/My_Active.svg" alt="" class="active" />
+                                                <img src="../images/claim-icons/My_Inactive.svg" alt=""
+                                                    class="offline" />
+                                                Use My Insurance
+                                            </span>
+                                        </label>
+                                    </div>
+                                    <div class="col-md-4 col-xl-4 col-6 z-index-2">
+                                        <label class="checkbox-inline squar-boxes mb-0" for="No">
+                                            <input class="checkbox-control" type="radio" name="glass-damage" value=""
+                                                id="No">
+                                            <span class="checkbox-custom"></span>
+                                            <span class="checkbox-label fs-14">
+                                                <img src="../images/claim-icons/Their_Active.svg" alt=""
+                                                    class="active" />
+                                                <img src="../images/claim-icons/Their_Inactive.svg" alt=""
+                                                    class="offline" />
+                                                Use Their Insurance
+                                            </span>
+                                        </label>
+                                    </div>
                                 </div>
                             </div>
 
