--- a/src/client-profile/claim-3.html
+++ b/src/client-profile/claim-3.html
@@ -147,29 +147,38 @@
                         <h3 class="title  text-center">Select Glass Needs Below</h3>
 
                         <form class="mt-4">
-                            <div class="contain-wrapper-sm">
-                                <div class="d-flex flex-wrap justify-content-center claim-section ">
-                                    <label class="checkbox-inline squar-boxes  flex-grow-1 mb-0" for="Yes">
-                                        <input class="checkbox-control" type="radio" name="glass-damage" value="" id="Yes" checked>
-                                        <span class="checkbox-custom"></span>
-                                        <span class="checkbox-label fs-16">
-                                            <img src="../images/claim-icons/glass-damage-active.svg" alt="" class="active" />
-                                            <img src="../images/claim-icons/glass-damage-inactive.svg" alt="" class="offline" />
-                                            Needs Repair
-                                        </span>
-                                    </label>
-                                    <label class="checkbox-inline squar-boxes flex-grow-1 mb-0" for="repaired">
-                                        <input class="checkbox-control" type="radio" name="glass-damage" value="" id="repaired">
-                                        <span class="checkbox-custom"></span>
-                                        <span class="checkbox-label">
+                            <div class="container-wrapper-md container-claim">
 
-                                            <img src="../images/claim-icons/Glass-already-repaired_Active.svg" alt=""
-                                                class="active" />
-                                            <img src="../images/claim-icons/Glass-already-repaired_Inactive.svg" alt=""
-                                                class="offline" />
+                                <div class="row g-3 justify-content-center claim-section">
+                                    <div class="col-md-5 col-6 z-index-2">
+                                        <label class="checkbox-inline squar-boxes  flex-grow-1 mb-0" for="Yes">
+                                            <input class="checkbox-control" type="radio" name="glass-damage" value=""
+                                                id="Yes" checked>
+                                            <span class="checkbox-custom"></span>
+                                            <span class="checkbox-label fs-16">
+                                                <img src="../images/claim-icons/glass-damage-active.svg" alt=""
+                                                    class="active" />
+                                                <img src="../images/claim-icons/glass-damage-inactive.svg" alt=""
+                                                    class="offline" />
+                                                Needs Repair
+                                            </span>
+                                        </label>
+                                    </div>
+                                    <div class="col-md-5  col-6 z-index-2">
+                                        <label class="checkbox-inline squar-boxes flex-grow-1 mb-0" for="repaired">
+                                            <input class="checkbox-control" type="radio" name="glass-damage" value=""
+                                                id="repaired">
+                                            <span class="checkbox-custom"></span>
+                                            <span class="checkbox-label">
+
+                                                <img src="../images/claim-icons/Glass-already-repaired_Active.svg"
+                                                    alt="" class="active" />
+                                                <img src="../images/claim-icons/Glass-already-repaired_Inactive.svg"
+                                                    alt="" class="offline" />
                                                 Glass already repaired
-                                        </span>
-                                    </label>
+                                            </span>
+                                        </label>
+                                    </div>
                                 </div>
                             </div>
 
