--- a/src/client-profile/claim-4.html
+++ b/src/client-profile/claim-4.html
@@ -147,8 +147,10 @@
                         <h3 class="title  text-center">Which piece of glass is damaged ?</h3>
 
                         <form class="mt-4">
-                            <div class="container-wrapper-md">
-                                <div class="d-flex flex-wrap justify-content-center claim-section ">
+                            <div class="container-wrapper-md container-claim">
+
+                            <div class="row g-3 justify-content-center claim-section">
+                                <div class="col-md-4 col-xl-3 col-6 z-index-2">
                                     <label class="checkbox-inline squar-boxes mb-0" for="front">
                                         <input class="checkbox-control" type="radio" name="glass-damage" value="" id="front" checked>
                                         <span class="checkbox-custom"></span>
@@ -158,6 +160,8 @@
                                             Front Windshield
                                         </span>
                                     </label>
+                                </div>
+                                    <div class="col-md-4 col-xl-3 col-6 z-index-2">
                                     <label class="checkbox-inline squar-boxes mb-0" for="rear">
                                         <input class="checkbox-control" type="radio" value="" id="rear" checked>
                                         <span class="checkbox-custom"></span>
@@ -168,6 +172,8 @@
                                             Rear Windshield
                                         </span>
                                     </label>
+                                </div>
+                                    <div class="col-md-4 col-xl-3 col-6 z-index-2">
                                     <label class="checkbox-inline squar-boxes mb-0" for="side-window">
                                         <input class="checkbox-control" type="radio" value="" id="side-window">
                                         <span class="checkbox-custom"></span>
@@ -180,6 +186,8 @@
                                                 Side Windows
                                         </span>
                                     </label>
+                                </div>
+                                    <div class="col-md-4 col-xl-3 col-6 z-index-2">
                                     <label class="checkbox-inline squar-boxes mb-0" for="mirror">
                                         <input class="checkbox-control" type="radio" value="" id="mirror" checked>
                                         <span class="checkbox-custom"></span>
@@ -192,6 +200,7 @@
                                                 Mirrors
                                         </span>
                                     </label>
+                                </div>  
                                 </div>
                             </div>
 
