--- a/src/client-profile/claim-9.html
+++ b/src/client-profile/claim-9.html
@@ -148,8 +148,8 @@
 
                         <form class="mt-4">
                             <div class="contain-wrapper-sm d-flex justify-content-center">
-                                <div class="row w-100">
-                                    <div class="col-6">
+                                <div class="row w-100 justify-content-center">
+                                    <div class="col-xl-3 col-4 ">
                                         <label class="radio-inline w-100 radio-btn" for="living2Yes">
                                             <input class="radio-control" type="radio" name="living2" value=""
                                                 id="living2Yes">
@@ -157,7 +157,7 @@
                                             <span class="radio-label text-center fs-14 w-100">Yes</span>
                                         </label>
                                     </div>
-                                    <div class="col-6">
+                                    <div class="col-xl-3 col-4 ">
                                         <label class="radio-inline w-100 radio-btn" for="living2No">
                                             <input class="radio-control" type="radio" name="living2" value=""
                                                 id="living2No" checked>
@@ -169,7 +169,6 @@
                             </div>
 
                             <div class="contain-wrapper-sm claim-additional-info mt-4 bg-white border border-1">
-
 
                                 <div class="blue-card">
                                     <div class="row g-3">
