--- a/src/client-profile/claim-15.html
+++ b/src/client-profile/claim-15.html
@@ -201,7 +201,7 @@
                                         </div>
 
                                         <div class="col-md-4">
-                                            <label class="">                                                
+                                            <label class="fw-500">                                                
                                                 Date of Birth
                                             </label>
                                             <div class="input-group date form-control px-0" id="datepicker1">
@@ -216,7 +216,7 @@
 
                                         <div class="col-md-4 d-flex justify-content-between">
                                            
-                                            <label class="">                                                
+                                            <label class="fw-500">                                                
                                                 State
                                             </label>
                                             <div class="d-flex align-items-center justify-content-start">
@@ -242,7 +242,7 @@
                                         
                                         <div class="col-md-4">
                                             <div class="form-group">
-                                                <label class="">                                                
+                                                <label class="fw-500">                                                
                                                     License Country
                                                 </label>
                                                 <div class="f-dropdown selectDropdown">
