--- a/src/client-profile/claim-2-2.html
+++ b/src/client-profile/claim-2-2.html
@@ -147,51 +147,70 @@
                         <h3 class="title  text-center">Select all that apply to you</h3>
 
                         <form class="mt-4">
-                            <div class="container-wrapper-md">
-                                <div class="d-flex flex-wrap justify-content-center claim-section ">
-                                    <label class="checkbox-inline squar-boxes mb-0" for="None">
-                                        <input class="checkbox-control" type="checkbox" name="None" value="" id="None" checked>
-                                        <span class="checkbox-custom"></span>
-                                        <span class="checkbox-label fs-16">
-                                            <img src="../images/claim-icons/none-active.svg" alt="" class="active" />
-                                            <img src="../images/claim-icons/none-inactive.svg" alt="" class="offline" />
-                                            None
-                                        </span>
-                                    </label>
-                                    <label class="checkbox-inline squar-boxes  mb-0" for="hitnrun">
-                                        <input class="checkbox-control" type="checkbox" name="hitnrun" value="" id="hitnrun">
-                                        <span class="checkbox-custom"></span>
-                                        <span class="checkbox-label fs-16">
-                                            <img src="../images/claim-icons/hit-run-active.svg" alt=""
-                                                class="active" />
-                                            <img src="../images/claim-icons/hit-run-inactive.svg" alt="" class="offline" />
-                                            Hit & Run
-                                        </span>
-                                    </label>
-                                    <label class="checkbox-inline squar-boxes mb-0" for="airbag">
-                                        <input class="checkbox-control" type="checkbox" name="airbag" value="" id="airbag">
-                                        <span class="checkbox-custom"></span>
-                                        <span class="checkbox-label fs-16">
+                            <div class="container-wrapper-md container-claim">
 
-                                            <img src="../images/claim-icons/airbag-active.svg" alt=""
-                                                class="active" />
-                                            <img src="../images/claim-icons/airbag-inactive.svg" alt=""
-                                                class="offline" />
+                                <div class="row g-3 justify-content-center claim-section">
+                              
+                                <div class="col-md-3 col-6 z-index-2">
+                                        <label class="checkbox-inline squar-boxes mb-0 w-auto" for="no-info">
+                                            <input class="checkbox-control main" type="checkbox" value="" id="no-info">
+                                            <span class="checkbox-custom"></span>
+                                            <span class="checkbox-label fs-16 fw-700 ">
+
+                                                <img src="../images/claim-icons/none-active.svg" alt=""
+                                                    class="active" />
+                                                <img src="../images/claim-icons/none-inactive.svg" alt=""
+                                                    class="offline" />
+
+                                                    None
+                                            </span>
+
+                                        </label>
+                                    </div>
+                                    <div class="col-md-3 col-6 z-index-2">
+                                        <label class="checkbox-inline squar-boxes  mb-0" for="hitnrun">
+                                            <input class="checkbox-control" type="checkbox" name="hitnrun" value=""
+                                                id="hitnrun">
+                                            <span class="checkbox-custom"></span>
+                                            <span class="checkbox-label fs-16">
+                                                <img src="../images/claim-icons/hit-run-active.svg" alt=""
+                                                    class="active" />
+                                                <img src="../images/claim-icons/hit-run-inactive.svg" alt=""
+                                                    class="offline" />
+                                                Hit & Run
+                                            </span>
+                                        </label>
+                                    </div>
+                                    <div class="col-md-3 col-6 z-index-2">
+                                        <label class="checkbox-inline squar-boxes mb-0" for="airbag">
+                                            <input class="checkbox-control" type="checkbox" name="airbag" value=""
+                                                id="airbag">
+                                            <span class="checkbox-custom"></span>
+                                            <span class="checkbox-label fs-16">
+
+                                                <img src="../images/claim-icons/airbag-active.svg" alt=""
+                                                    class="active" />
+                                                <img src="../images/claim-icons/airbag-inactive.svg" alt=""
+                                                    class="offline" />
                                                 Airbags deployed
-                                        </span>
-                                    </label>
-                                    <label class="checkbox-inline squar-boxes mb-0" for="parked">
-                                        <input class="checkbox-control" type="checkbox" name="parked" value="" id="parked">
-                                        <span class="checkbox-custom"></span>
-                                        <span class="checkbox-label fs-16">
+                                            </span>
+                                        </label>
+                                    </div>
+                                    <div class="col-md-3 col-6 z-index-2">
+                                        <label class="checkbox-inline squar-boxes mb-0" for="parked">
+                                            <input class="checkbox-control" type="checkbox" name="parked" value=""
+                                                id="parked">
+                                            <span class="checkbox-custom"></span>
+                                            <span class="checkbox-label fs-16">
 
-                                            <img src="../images/claim-icons/parking-active.svg" alt=""
-                                                class="active" />
-                                            <img src="../images/claim-icons/parking-inactive.svg" alt=""
-                                                class="offline" />
+                                                <img src="../images/claim-icons/parking-active.svg" alt=""
+                                                    class="active" />
+                                                <img src="../images/claim-icons/parking-inactive.svg" alt=""
+                                                    class="offline" />
                                                 My Vehicle Was Parked
-                                        </span>
-                                    </label>
+                                            </span>
+                                        </label>
+                                    </div>
                                 </div>
                             </div>
 
