--- a/src/client-profile/claim-8.html
+++ b/src/client-profile/claim-8.html
@@ -147,8 +147,10 @@
                         <h3 class="title  text-center">Are you being charged any storage fees?</h3>
 
                         <form class="mt-4">
-                            <div class="container-wrapper-md">
-                                <div class="d-flex flex-wrap justify-content-center claim-section ">
+                            <div class="container-wrapper-md container-claim">
+
+                                <div class="row g-3 justify-content-center claim-section">
+                                    <div class="col-md-4 col-xl-4 col-6 z-index-2">
                                     <label class="checkbox-inline squar-boxes mb-0" for="Yes">
                                         <input class="checkbox-control" type="radio" name="glass-damage" value="" id="Yes" checked>
                                         <span class="checkbox-custom"></span>
@@ -158,6 +160,8 @@
                                             Yes
                                         </span>
                                     </label>
+                                </div>
+                                <div class="col-md-4 col-xl-4 col-6 z-index-2">
                                     <label class="checkbox-inline squar-boxes mb-0" for="No">
                                         <input class="checkbox-control" type="radio" name="glass-damage" value="" id="No">
                                         <span class="checkbox-custom"></span>
@@ -168,6 +172,8 @@
                                             No
                                         </span>
                                     </label>
+                                </div>
+                                <div class="col-md-4 col-xl-4 col-6 z-index-2">
                                     <label class="checkbox-inline squar-boxes mb-0" for="repaired">
                                         <input class="checkbox-control" type="radio" name="glass-damage" value="" id="repaired">
                                         <span class="checkbox-custom"></span>
@@ -180,6 +186,7 @@
                                                 Not Sure
                                         </span>
                                     </label>
+                                </div>
                                 </div>
                             </div>
 
